[tool.poetry]
name = "cbtk"
version = "0.1.0"
description = ""
authors = ["Kazuhisa Ishizaka <iszk1215@gmail.com>"]
readme = "README.md"
include = ["cbtk/www/*.js"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.2"
python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cbtk = "cbtk.main:main"

[tool.black]
line-length = 79
